--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-#root {
+/* #root {
   width: 100%;
   margin: 0 auto;
   padding: 2rem;
@@ -44,4 +44,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
